@@ -6,6 +6,7 @@
 #  id          :integer(4)      not null, primary key
 #  uuid        :string(36)
 #  user_id     :integer(4)
+#  lead_id     :integer(4)
 #  assigned_to :integer(4)
 #  reports_to  :integer(4)
 #  first_name  :string(64)      default(""), not null
