@@ -5,7 +5,7 @@
     You can add campaign objectives later.
   #objectives{ hidden_if(collapsed) }
     %small
-      Please specify target number of leads, expected conversion ratio, target revenue, and 
+      Please specify target number of leads, expected leads-to-opportunities conversion ratio, target revenue, and 
       campaign budget. These numbers will let you track actual campaign performance.
     %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
