@@ -7,12 +7,15 @@ class CreateCampaigns < ActiveRecord::Migration
       t.string      :access, :limit => 8, :default => "Private" # %w(Private Public Shared)
       t.string      :status, :limit => 64
       t.decimal     :budget, :precision => 12, :scale => 2
+      # Target metrics.
       t.integer     :target_leads
-      t.float       :target_conversion
+      t.float       :target_conversion # leads-to-opportunities conversion ratio (%)
       t.decimal     :target_revenue, :precision => 12, :scale => 2
-      t.integer     :actual_leads
-      t.float       :actual_conversion
-      t.decimal     :actual_revenue, :precision => 12, :scale => 2
+      # Actual metrics.
+      t.integer     :leads_count
+      t.integer     :opportunities_count
+      t.decimal     :revenue, :precision => 12, :scale => 2
+      # Dates.
       t.date        :starts_on
       t.date        :ends_on
       t.text        :objectives
