@@ -10,6 +10,19 @@
 #  created_at :datetime
 #  updated_at :datetime
 #
+
+# == Schema Information
+# Schema version: 14
+#
+# Table name: account_contacts
+#
+#  id         :integer(4)      not null, primary key
+#  account_id :integer(4)
+#  contact_id :integer(4)
+#  deleted_at :datetime
+#  created_at :datetime
+#  updated_at :datetime
+#
 <%
   for i in (1 .. 20) do
     random = rand(20)
