@@ -11,6 +11,20 @@
 #  created_at     :datetime
 #  updated_at     :datetime
 #
+
+# == Schema Information
+# Schema version: 14
+#
+# Table name: contact_opportunities
+#
+#  id             :integer(4)      not null, primary key
+#  contact_id     :integer(4)
+#  opportunity_id :integer(4)
+#  role           :string(32)
+#  deleted_at     :datetime
+#  created_at     :datetime
+#  updated_at     :datetime
+#
 <%
   for i in (1 .. 20) do
     random = rand(20)
